--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -89,7 +89,7 @@
       <div fxLayout="column">
 
         <span class="header">Theme</span>
-        <mifosx-theme-picker></mifosx-theme-picker>
+        <midas-theme-picker></midas-theme-picker>
 
         <mat-form-field>
           <mat-label>Default Font</mat-label>
