--- a/src/app/clients/clients-view/clients-view.component-theme.scss
+++ b/src/app/clients/clients-view/clients-view.component-theme.scss
@@ -3,11 +3,12 @@
 @mixin clients-view-component-theme($theme) {
   $primary: map-get($theme, primary);
 
-  mifosx-clients-view {
+  mifosx-clients-view {    
     .client-card {
       .header {
-        background-color: mat-color($primary, 500);
+        background-color: mat-color($primary);
       }
+
     }
   }
 
