--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.scss
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.scss
@@ -6,13 +6,17 @@
       margin:1% auto;
     }
     table {
-      width: 100%;
-      .identity-action-button{
-        min-width: 26px;
-        padding: 0 6px;
-        margin: 4px;
-        line-height: 25px;
+      
+      td,th{
+        text-align: center;
       }
+      td:first-child{
+        width: 20%;
+      }
+      td:last-child{
+        width: 15%;
+      }
+                 
     }
   }
   
