--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -22,10 +22,7 @@
 
     <!-- Toolbar -->
     <mifosx-toolbar [sidenav]="sidenav" (collapse)="toggleCollapse($event)"
-    [ngClass]="{
-      'toolBarCss-full': sidenavCollapsed,
-      'toolBarCss-compact': !sidenavCollapsed
-    }"
+    class="toolBarCss"
 
     ></mifosx-toolbar>
     <!-- Progress Bar -->
