--- a/src/app/shared/theme-picker/theme-picker.component.scss
+++ b/src/app/shared/theme-picker/theme-picker.component.scss
@@ -4,7 +4,7 @@ $theme-picker-grid-cells-per-row: 2;
 $theme-picker-swatch-size: 36px;
 $theme-picker-accent-stripe-size: 6px;
 
-.mifosx-theme-picker-menu {
+.midas-theme-picker-menu {
   .mat-menu-content {
     padding: $theme-picker-menu-padding;
   }
@@ -15,7 +15,7 @@ $theme-picker-accent-stripe-size: 6px;
     overflow: hidden;
   }
 
-  .mifosx-theme-picker-swatch {
+  .midas-theme-picker-swatch {
     position: relative;
     width: $theme-picker-swatch-size;
     height: $theme-picker-swatch-size;
@@ -23,7 +23,7 @@ $theme-picker-accent-stripe-size: 6px;
     border-radius: 50%;
     overflow: hidden;
 
-    .mifosx-theme-chosen-icon {
+    .midas-theme-chosen-icon {
       color: white;
       position: absolute;
       left: 50%;
@@ -44,12 +44,12 @@ $theme-picker-accent-stripe-size: 6px;
     }
   }
 
-  .mifosx-theme-picker-primary {
+  .midas-theme-picker-primary {
     width: 100%;
     height: 100%;
   }
 
-  .mifosx-theme-picker-accent {
+  .midas-theme-picker-accent {
     position: absolute;
     bottom: $theme-picker-accent-stripe-size;
     width: 100%;
