--- a/src/app/shared/user-account-info/user-account-info.component.html
+++ b/src/app/shared/user-account-info/user-account-info.component.html
@@ -1,3 +1,4 @@
+
 <button
   class="aligned-with-icons"
   mat-icon-button
@@ -5,11 +6,11 @@
   matTooltip="Tổng số dư tài khoản ngân hàng"
   [matMenuTriggerFor]="UserSavingMenu"
 >
-  Số dư:
-  <span>{{ totalBalance | money }}</span>
+ 
+  <span> Số dư:{{ totalBalance | money }}</span>
 </button>
 
-<mat-menu style="min-width: 300px" class="midas-saving-menu" #UserSavingMenu="matMenu" [overlapTrigger]="false">
+<mat-menu  class="midas-saving-menu" #UserSavingMenu="matMenu" [overlapTrigger]="false">
   <mat-card>
     <mat-card-content>
       <ul class="dropdown-menu" *ngIf="listSaving?.length == 0">
@@ -38,3 +39,4 @@
     </mat-card-content>
   </mat-card>
 </mat-menu>
+
