Revert "scss config for client id and change UI for client lish"
This reverts commit d7469dbbf94334254e2861d2c08a604962fbe67e.

--- a/src/app/clients/clients-view/clients-view.component-theme.scss
+++ b/src/app/clients/clients-view/clients-view.component-theme.scss
@@ -3,12 +3,11 @@
 @mixin clients-view-component-theme($theme) {
   $primary: map-get($theme, primary);
 
-  mifosx-clients-view {    
+  mifosx-clients-view {
     .client-card {
       .header {
-        background-color: mat-color($primary);
+        background-color: mat-color($primary, 500);
       }
-
     }
   }
 
