--- a/src/app/clients/clients.component.scss
+++ b/src/app/clients/clients.component.scss
@@ -9,25 +9,14 @@ table {
 
 tr.example-detail-row {
   height: 0;
-
 }
 
-
-.mat-row:nth-child(odd){
-  background: transparent;
-}
-
-tr.example-element-row:not(.example-expanded-row):hover, .mat-row:nth-child(even) {
+tr.example-element-row:not(.example-expanded-row):hover {
   background: whitesmoke;
- 
-  td{
-    color:#000000
-  }
-  
 }
 
 tr.example-element-row:not(.example-expanded-row):active {
-  background:whitesmoke;
+  background: #efefef;
 }
 
 .example-element-row td {
