--- a/src/app/core/shell/shell.component.scss
+++ b/src/app/core/shell/shell.component.scss
@@ -32,21 +32,19 @@
     top:64px;
   }
 
-  .toolBarCss{
+  .toolBarCss-full{
     position: fixed;
     top: 0px;
     z-index: 9999;
-    width:100%;
+    width: calc(100vw - 4rem);
   }
 
-  // .toolBarCss-compact{
-  //   position: fixed;
-  //   top: 0px;
-  //   z-index: 9999;
-  //   width: 100%;
-  // }
- 
-  
+  .toolBarCss-compact{
+    position: fixed;
+    top: 0px;
+    z-index: 9999;
+    width: calc(100vw - 15rem);
+  }
 
   .footerCss{
     position:fixed;
