add some global scss, remove unused dependency from yarn.lock file

--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -4,10 +4,10 @@
   </mat-card-header> -->
 
   <mat-card-content fxLayout.lt-md="column">
-    <div fxFlex.gt-md="20" class="leftside">
+    <div fxFlex.gt-md="20" class="leftside ">
       <mat-card-title-group class="header-title-group">
         <h3> Thông tin khách hàng </h3>
-        <div class="profile-image-container">
+        <div class="profile-image-container mat-elevation-z8 p-10 m-b-10">
           <div fxLayoutAlign="center center">
             <img mat-card-md-image class="profile-image"
               [src]="clientImage ? clientImage : 'assets/images/user_placeholder.png'" />
