--- a/src/theme/custom/pictonblue-yellowgreen.scss
+++ b/src/theme/custom/pictonblue-yellowgreen.scss
@@ -33,6 +33,18 @@ $mat-yellow-green: (
   )
 );
 
+$mat-red: (
+  100: #FFCDD2,
+  500: #F44336,
+  700: #D32F2F,
+  contrast: (
+    100: $dark-primary-text,
+    500: $dark-primary-text,
+    700: $light-primary-text
+  )
+);
+
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
@@ -41,25 +53,25 @@ $mat-yellow-green: (
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$mifosx-app-primary: mat-palette($mat-picton-blue);
-$mifosx-app-accent:  mat-palette($mat-yellow-green);
+$midas-app-primary: mat-palette($mat-picton-blue);
+$midas-app-accent:  mat-palette($mat-yellow-green);
 
 // The warn palette is optional (defaults to red).
-$mifosx-app-warn:    mat-palette($mat-red);
+$midas-app-warn:    mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$mifosx-app-theme: mat-light-theme($mifosx-app-primary, $mifosx-app-accent, $mifosx-app-warn);
+$midas-app-theme: mat-light-theme($midas-app-primary, $midas-app-accent, $midas-app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($mifosx-app-theme);
-@include clients-view-component-theme($mifosx-app-theme);
-@include groups-view-component-theme($mifosx-app-theme);
-@include centers-view-component-theme($mifosx-app-theme);
-@include dashboard-component-theme($mifosx-app-theme);
-@include loans-view-component-theme($mifosx-app-theme);
-@include savings-account-view-component-theme($mifosx-app-theme);
-@include shares-account-view-component-theme($mifosx-app-theme);
-@include fixed-deposits-account-view-component-theme($mifosx-app-theme);
-@include recurring-deposits-account-view-component-theme($mifosx-app-theme);
+@include angular-material-theme($midas-app-theme);
+@include clients-view-component-theme($midas-app-theme);
+@include groups-view-component-theme($midas-app-theme);
+@include centers-view-component-theme($midas-app-theme);
+@include dashboard-component-theme($midas-app-theme);
+@include loans-view-component-theme($midas-app-theme);
+@include savings-account-view-component-theme($midas-app-theme);
+@include shares-account-view-component-theme($midas-app-theme);
+@include fixed-deposits-account-view-component-theme($midas-app-theme);
+@include recurring-deposits-account-view-component-theme($midas-app-theme);
