--- a/src/assets/styles/_colours.scss
+++ b/src/assets/styles/_colours.scss
@@ -36,26 +36,27 @@ $silver: #bdc3c7;
 $concrete: #95a5a6;
 $asbestos: #7f8c8d;
 
-// Message Colors
-$msg-default: #999;
-$msg-success: #5cb85c;
-$msg-warning: #f0ad4e;
-$msg-danger: #d9534f;
-$msg-info: #5bc0de;
+// Message Colors must be include important properties
+// Because it can be changed when user change theme
+$msg-default: #999 !important;
+$msg-success: #5cb85c !important;
+$msg-warning: #f0ad4e !important;
+$msg-danger: #d9534f !important;
+$msg-info: #5bc0de !important;
 
 //Social Colors
-$dailymile: #ffaa25;
-$facebook: #3b5998;
-$flickr: #f80082;
-$github: #f7f7f7;
-$google: #d7473d;
-$instagram: #37658d;
-$linkedin: #2c8cc0;
-$pinterest: #c5142b;
-$runkeeper: #3193d3;
-$skype: #00abee;
-$spotify: #7ab800;
-$twitter: #3b8aca;
+$dailymile: #ffaa25 !important;
+$facebook: #3b5998 !important;
+$flickr: #f80082 !important;
+$github: #f7f7f7 !important;
+$google: #d7473d !important;
+$instagram: #37658d !important;
+$linkedin: #2c8cc0 !important;
+$pinterest: #c5142b !important;
+$runkeeper: #3193d3 !important;
+$skype: #00abee !important;
+$spotify: #7ab800 !important;
+$twitter: #3b8aca !important;
 
 // Set Site Specific Base, Highlight and Accent Colors Here for easy switching between themes
 $base: $dark-grey;
