--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -74,7 +74,7 @@
     <!-- <br /> -->
     <button fxHide.lt-md mat-icon-button class="ml-1 img-button" [matMenuTriggerFor]="applicationMenu">
       <img style="position: absolute" src="assets/images/user_placeholder.png" /> <br />
-      <span style="text-decoration: underline; position: relative; top: -20px">{{ currentUser.username }}</span>
+      <span style="text-decoration: underline; position: relative; top: -20px;  left: -10px">{{ currentUser.username }}</span>
     </button>
   </div>
 </mat-toolbar>
